kustomize/3-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: slack-bots
  labels:
    app: slack-bots
    tier: frontend
spec:
  type: LoadBalancer
  selector:
    app: slack-bots
  ports:
    - name: slack-bots
      protocol: TCP
      port: 80
      targetPort: 3000
